--- a/InvertedPend.qsf
+++ b/InvertedPend.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
-set_global_assignment -name TOP_LEVEL_ENTITY motordriver
+set_global_assignment -name TOP_LEVEL_ENTITY testmotor
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:48:32  MAY 25, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
@@ -46,6 +46,25 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+
+set_location_assignment PIN_P11 -to clkor
+set_location_assignment PIN_AA12 -to motor[0]
+set_location_assignment PIN_AA11 -to motor[1]
+set_location_assignment PIN_Y10 -to motor[2]
+set_location_assignment PIN_AB9 -to motor[3]
+
+
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clkor
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[3]
+set_global_assignment -name SYSTEMVERILOG_FILE comparator.sv
 set_global_assignment -name SYSTEMVERILOG_FILE tribuffer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE sclmux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux9.sv
@@ -54,26 +73,9 @@ set_global_assignment -name SYSTEMVERILOG_FILE decoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Counter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE comparator9.sv
 set_global_assignment -name SYSTEMVERILOG_FILE comparator2.sv
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name SYSTEMVERILOG_FILE motordriver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE motormux.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE comparator4.sv
 set_global_assignment -name BDF_FILE testmotor.bdf
-
-set_location_assignment PIN_P11 -to CLK
-set_location_assignment PIN_AA12 -to motor[0]
-set_location_assignment PIN_AA11 -to motor[1]
-set_location_assignment PIN_Y10 -to motor[2]
-set_location_assignment PIN_AB9 -to motor[3]
-
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[3]
-
+set_global_assignment -name SYSTEMVERILOG_FILE sync.sv
+set_global_assignment -name SYSTEMVERILOG_FILE testmotor.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
