--- a/InvertedPend.qsf
+++ b/InvertedPend.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX 10"
 set_global_assignment -name DEVICE 10M50DAF484C7G
-set_global_assignment -name TOP_LEVEL_ENTITY motortest
+set_global_assignment -name TOP_LEVEL_ENTITY InvertedPend
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:48:32  MAY 25, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
@@ -54,6 +54,7 @@ set_location_assignment PIN_AA12 -to motor[0]
 set_location_assignment PIN_AA11 -to motor[1]
 set_location_assignment PIN_Y10 -to motor[2]
 set_location_assignment PIN_AB9 -to motor[3]
+set_location_assignment PIN_C10 -to testrev
 
 
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
@@ -64,6 +65,11 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[2]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to motor[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to testrev
+set_global_assignment -name SYSTEMVERILOG_FILE motor/motordecode.sv
+set_global_assignment -name VERILOG_FILE motor/motortest.v
+set_global_assignment -name SYSTEMVERILOG_FILE motor/motordriver.sv
+set_global_assignment -name BDF_FILE InvertedPend.bdf
 set_global_assignment -name SYSTEMVERILOG_FILE tribuffer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE sclmux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux9.sv
@@ -71,9 +77,8 @@ set_global_assignment -name SYSTEMVERILOG_FILE decoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE motor/wavedecoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE motor/testmotor.sv
 set_global_assignment -name BDF_FILE motor/motortest.bdf
-set_global_assignment -name SYSTEMVERILOG_FILE motor/motormux.sv
-set_global_assignment -name SYSTEMVERILOG_FILE motor/motordriver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE basic/sync.sv
 set_global_assignment -name SYSTEMVERILOG_FILE basic/Counter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE basic/comparator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE basic/eninvert.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
